--- a/impacto-global.html
+++ b/impacto-global.html
@@ -8,11 +8,11 @@
     <!-- htaccess link -->
     <link rel="htaccess">
     <!-- browser icon -->
-    <link rel="icon" href="./img/logo2.png" type="image/png">
+    <link rel="icon" href="/img/logo2.png" type="image/png">
     <!-- stylesheet -->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/style-header.css">
-    <link rel="stylesheet" href="./css/style-footer.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style-header.css">
+    <link rel="stylesheet" href="/css/style-footer.css">
     <!-- bootstrap 5 link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
@@ -27,11 +27,11 @@
     <!-- javascript header & footer function -->
     <script> 
       $(function(){
-      $("#header").load("./components/header.html"); 
+      $("#header").load("/components/header.html"); 
       });
 
       $(function(){
-      $("#footer").load("./components/footer.html"); 
+      $("#footer").load("components/footer.html"); 
       });
   </script> 
   </head>
@@ -47,7 +47,7 @@
           <p class="m-0">Conheça os</p>
           <h1 class="title">Dados da Fome</h1>
           <div class="line-hunger my-3"></div>
-          <div><img src="./img/5.png" class="img-fluid mt-4 mb-4"></div>
+          <div><img src="/img/5.png" class="img-fluid mt-4 mb-4"></div>
           <p class="m-0 mt-4">
             A fome se trata de uma ameaça universal.<br>
             Os danos causados, especialmente, devido à guerra na Ucrânia e à COVID-19 continuam a prejudicar os agricultores, 
