--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Hunger</title>
     <!-- browser icon -->
-    <link rel="icon" href="./img/logo2.png" type="image/png">
+    <link rel="icon" href="/img/logo2.png" type="image/png">
     <!-- stylesheet -->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/style-header.css">
-    <link rel="stylesheet" href="./css/style-footer.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style-header.css">
+    <link rel="stylesheet" href="/css/style-footer.css">
     <!-- bootstrap 5 link -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">  
@@ -20,23 +20,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
-    <!-- script js-cookie -->
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <!-- script jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="./js/dark-theme.js"></script>
     <!-- javascript header & footer function -->
     <script> 
       $(function(){
-      $("#header").load("./components/header.html"); 
+      $("#header").load("components/header.html"); 
       });
 
       $(function(){
-      $("#footer").load("./components/footer.html"); 
+      $("#footer").load("components/footer.html"); 
       });
   </script> 
-</head>
-<body class="bodyy">
+  </head>
+<body>
   <div id="header"></div>
   <!--*************************  A Crise da Fome  ***************************-->
   <section class="main pt-5 pb-5">
@@ -65,7 +62,7 @@
           <a href="a-crise-da-fome.html"><button class="mbtn1 mt-4">Saiba mais</button></a>
           <a href="https://www.acaodacidadania.org.br/" target="_blank"><button class="mbtn3 mt-4 m-lg-2">♡ Doe agora</button></a>
         </div>
-        <div class="col-lg-6"><img src="./img/img3.png" class="img-fluid w-100 img-a-crise-da-fome"></div>
+        <div class="col-lg-6"><img src="/img/img3.png" class="img-fluid w-100 img-a-crise-da-fome"></div>
       </div>
     </div>
   </section>
@@ -73,7 +70,7 @@
   <section class="impacto-global pt-5 pb-5">
     <div class="container">
       <div class="row pb-3">
-        <div class="col-lg-6"><img src="./img/img2.png" class="img-fluid w-100 img-impacto-global"></div>
+        <div class="col-lg-6"><img src="/img/img3.png" class="img-fluid w-100 img-impacto-global"></div>
         <div class="col-lg-6 mt-3">
           <p class="m-0">Lorem ipsum</p>
           <h1>Insegurança Alimentar</h1>
@@ -117,13 +114,12 @@
             Temos uma escolha: agir agora para salvar vidas e investir em soluções que garantam segurança alimentar, estabilidade e paz para todos, 
             ou ver pessoas em todo o mundo enfrentando uma fome crescente.
           </p>
-          <a href="fome-zero.html"><button class="mbtn2 mbtn-light mt-5">Saiba mais</button></a>
+          <a href="fome-zero.html"><button class="mbtn2 mt-5">Saiba mais</button></a>
         </div>
-        <div class="col-lg-6"><img src="./img/img3.png" class="img-fluid w-100 img-fome-zero"></div>
+        <div class="col-lg-6"><img src="/img/img3.png" class="img-fluid w-100 img-fome-zero"></div>
       </div>
     </div>
   </section>
-  <button id="botao">Toggle dark mode</button>
   <!--*************************  Footer  ***************************-->
   <div class="mt-5" id="footer"></div>
 </body>
