Ajustando a forma que as classes para ativar o dark-theme eram alteradas, pois nem todos os elementos eram mudados para dark

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       });
   </script> 
 </head>
-<body class="bodyy">
+<body class="body">
   <div id="header"></div>
   <!--*************************  A Crise da Fome  ***************************-->
   <section class="main pt-5 pb-5">
