--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     <!-- script js-cookie -->
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
     <!-- script jquery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./js/dark-theme.js"></script>
     <!-- javascript header & footer function -->
     <script> 
       $(function(){
-      $("#header").load("./components/header.html"); 
+        $("#header").load("./components/header.html"); 
       });
 
       $(function(){
-      $("#footer").load("./components/footer.html"); 
+        $("#footer").load("./components/footer.html"); 
       });
   </script> 
 </head>
