Refatorando ordem do carregamento dos elementos e da aplicação do tema

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
     <script src="./js/dark-theme.js"></script>
     <!-- javascript header & footer function -->
     <script> 
-      $(function(){
-        $("#header").load("./components/header.html"); 
-      });
+      // $(function(){
+      //   $("#header").load("./components/header.html"); 
+      // });
 
-      $(function(){
-        $("#footer").load("./components/footer.html"); 
-      });
+      // $(function(){
+      //   $("#footer").load("./components/footer.html"); 
+      // });
   </script> 
 </head>
 <body class="body">
