Reestruturação do CSS e HTML e concluindo mudança de tema para a página inicial

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       // });
   </script> 
 </head>
-<body class="body">
+<body class="body bg-color-body">
   <div id="header"></div>
   <!--*************************  A Crise da Fome  ***************************-->
   <section class="main pt-5 pb-5">
@@ -89,7 +89,7 @@
             criar uma crise alimentar de proporções sem precedentes. <br>
             Até 828 milhões de pessoas não têm certeza de onde virá sua próxima refeição. <br>
           </p>                   
-          <a href="impacto-global.html"><button class="mbtn2 mt-5">Saiba mais</button></a>
+          <a href="impacto-global.html"><button class="mbtn2 mbtn mt-5">Saiba mais</button></a>
         </div>
       </div>
     </div>
@@ -117,7 +117,7 @@
             Temos uma escolha: agir agora para salvar vidas e investir em soluções que garantam segurança alimentar, estabilidade e paz para todos, 
             ou ver pessoas em todo o mundo enfrentando uma fome crescente.
           </p>
-          <a href="fome-zero.html"><button class="mbtn2 mbtn-light mt-5">Saiba mais</button></a>
+          <a href="fome-zero.html"><button class="mbtn2 mbtn mt-5">Saiba mais</button></a>
         </div>
         <div class="col-lg-6"><img src="./img/img3.png" class="img-fluid w-100 img-fome-zero"></div>
       </div>
