--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
     <!-- script js-cookie -->
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script> -->
     <!-- script jquery -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/dark-theme.js"></script>
+    <script src="./js/dark-theme.js" type="module"></script>
     <!-- javascript header & footer function -->
     <script> 
       // $(function(){
@@ -38,6 +38,7 @@
 </head>
 <body class="body bg-color-body">
   <div id="header"></div>
+  <div id="body"></div>
   <!--*************************  A Crise da Fome  ***************************-->
   <section class="main pt-5 pb-5">
     <div class="my-5"></div>
