--- a/index.html
+++ b/index.html
@@ -20,25 +20,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Righteous&display=swap" rel="stylesheet">
-    <!-- script js-cookie -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script> -->
-    <!-- script jquery -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- script tema-dark -->
     <script src="./js/dark-theme.js" type="module"></script>
-    <!-- javascript header & footer function -->
     <script> 
-      // $(function(){
-      //   $("#header").load("./components/header.html"); 
-      // });
-
-      // $(function(){
-      //   $("#footer").load("./components/footer.html"); 
-      // });
   </script> 
 </head>
-<body class="body bg-color-body">
+<body class="bg-color-body">
   <div id="header"></div>
-  <div id="body"></div>
   <!--*************************  A Crise da Fome  ***************************-->
   <section class="main pt-5 pb-5">
     <div class="my-5"></div>
