--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>World Hunger</title>
+    <title>Schneider Electric</title>
     <!-- browser icon -->
-    <link rel="icon" href="./img/logo2.png" type="image/png">
+    <link rel="icon" href="./img/logo-schneider.png" type="image/png">
     <!-- stylesheet -->
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/style-header.css">
