--- a/index-certo.html
+++ b/index-certo.html
@@ -195,164 +195,168 @@
     </header>
     <div class="bd-masthead mb-3" id="content">
         <div class="container-xxl bd-gutter">
-            <div class="col-md-12 mx-auto text-center">
-                <h1 class="mb-3 fw-semibold lh-1">The world's most sustainable company</h1>
-            </div>
+          <div class="col-md-8 mx-auto mt-5">
+            <p class="mt-4 mb-4 text-center">
+                <img src="./img/flower-plant.png" width="6%">
+            </p>
+          </div>
+          <div class="col-md-12 mx-auto text-center">
+              <h1 class="mb-3 fw-semibold lh-1">The world's most sustainable company</h1>
+              <p class="mb-3 text-center lead">Let's explore some sustainable activities tips for your free time!</p>
+          </div>
         </div>
-
+  
         <section class="swiper mySwiper mt-5">
             <div class="swiper-wrapper">
                 <div class="card swiper-slide">
                     <div class="card-image">
-                        <img src="./img/1.png" alt="">
+                        <img src="./img/exploring.png" alt="">
                     </div>
                     <div class="card-content">
-                        <span class="card-title">Lorem, ipsum.</span>
-                        <span class="card-name">Lorem, ipsum.</span>
+                        <span class="card-title">Exploring outside</span>
+                        <span class="card-name">Let's go for a walk</span>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
-                        <button class="card-btn">Lorem, ipsum.</button>
+                        <button class="card-btn">Show more</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
                     <div class="card-image">
-                        <img src="./img/1.png" alt="">
+                        <img src="./img/friendship2.png" alt="">
                     </div>
                     <div class="card-content">
-                        <span class="card-title">Lorem, ipsum.</span>
+                        <span class="card-title">Picnics</span>
                         <span class="card-name">Lorem, ipsum.</span>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
-                        <button class="card-btn">Lorem, ipsum.</button>
+                        <button class="card-btn">Show more</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
                     <div class="card-image">
-                        <img src="./img/1.png" alt="">
+                        <img src="./img/camping.png" alt="">
                     </div>
                     <div class="card-content">
-                        <span class="card-title">Lorem, ipsum.</span>
+                        <span class="card-title">Camping</span>
                         <span class="card-name">Lorem, ipsum.</span>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
-                        <button class="card-btn">Lorem, ipsum.</button>
+                        <button class="card-btn">Show more</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
                     <div class="card-image">
-                        <img src="./img/1.png" alt="">
+                        <img src="./img/a-day-at-the-park2.png" alt="">
                     </div>
                     <div class="card-content">
-                        <span class="card-title">Lorem, ipsum.</span>
+                        <span class="card-title">A day at the park</span>
                         <span class="card-name">Lorem, ipsum.</span>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
-                        <button class="card-btn">Lorem, ipsum.</button>
+                        <button class="card-btn">Show more</button>
                     </div>
                 </div>
                 <div class="card swiper-slide">
                     <div class="card-image">
-                        <img src="./img/1.png" alt="">
+                        <img src="./img/trip.png" alt="">
                     </div>
                     <div class="card-content">
-                        <span class="card-title">Lorem, ipsum.</span>
+                        <span class="card-title">Trip with family & friends</span>
                         <span class="card-name">Lorem, ipsum.</span>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
-                        <button class="card-btn">Lorem, ipsum.</button>
+                        <button class="card-btn">Show more</button>
                     </div>
                 </div>
             </div>
         </section>
-        <div class="col-md-8 mx-auto mt-5">
-            <p class="lead mt-4 mb-3 text-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-tree" viewBox="0 0 16 16">
-                    <path d="M8.416.223a.5.5 0 0 0-.832 0l-3 4.5A.5.5 0 0 0 5 5.5h.098L3.076 8.735A.5.5 0 0 0 3.5 9.5h.191l-1.638 3.276a.5.5 0 0 0 .447.724H7V16h2v-2.5h4.5a.5.5 0 0 0 .447-.724L12.31 9.5h.191a.5.5 0 0 0 .424-.765L10.902 5.5H11a.5.5 0 0 0 .416-.777l-3-4.5zM6.437 4.758A.5.5 0 0 0 6 4.5h-.066L8 1.401 10.066 4.5H10a.5.5 0 0 0-.424.765L11.598 8.5H11.5a.5.5 0 0 0-.447.724L12.69 12.5H3.309l1.638-3.276A.5.5 0 0 0 4.5 8.5h-.098l2.022-3.235a.5.5 0 0 0 .013-.507z"/>
-                </svg>
-                <br>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci ab qui dignissimos odio alias, molestiae optio quidem repudiandae! Tempore, nemo.
+          <div class="col-md-8 mx-auto mt-5">
+              <p class="lead mt-4 mb-3 text-center">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" fill="currentColor" class="bi bi-tree" viewBox="0 0 16 16">
+                      <path d="M8.416.223a.5.5 0 0 0-.832 0l-3 4.5A.5.5 0 0 0 5 5.5h.098L3.076 8.735A.5.5 0 0 0 3.5 9.5h.191l-1.638 3.276a.5.5 0 0 0 .447.724H7V16h2v-2.5h4.5a.5.5 0 0 0 .447-.724L12.31 9.5h.191a.5.5 0 0 0 .424-.765L10.902 5.5H11a.5.5 0 0 0 .416-.777l-3-4.5zM6.437 4.758A.5.5 0 0 0 6 4.5h-.066L8 1.401 10.066 4.5H10a.5.5 0 0 0-.424.765L11.598 8.5H11.5a.5.5 0 0 0-.447.724L12.69 12.5H3.309l1.638-3.276A.5.5 0 0 0 4.5 8.5h-.098l2.022-3.235a.5.5 0 0 0 .013-.507z"/>
+                  </svg>
+                  <br>
+                  A sustentabilidade melhora a qualidade de vida, protege o nosso ecossistema e preserva os recursos naturais para as gerações futuras. 
+                  <br>
+                  Tornar-se verde e sustentável não é apenas benéfico para as empresas, também maximiza os benefícios de um enfoque ambiental a longo prazo.
+              </p>
+          </div>
+    </div>
+  
+    <section class="sust-meaning">
+    <div class="container">
+        <div class="row pb-3">
+        <div class="col-lg-6 mt-3">
+            <p class="m-0">Vamos falar sobre a</p>
+            <h1>Sustentabilidade</h1>     
+            <p class="m-0 mt-4">
+            Sustentabilidade é um conceito relacionado ao desenvolvimento de produtos, bens e serviços que envolve atender às nossas necessidades presentes 
+            sem comprometer a capacidade das gerações futuras de atender às suas próprias necessidades.<br><br>
+            Como conceito, ela reconhece que o meio ambiente é um recurso esgotável. Portanto, é importante usar o meio ambiente e seus recursos 
+            de forma racional e protegê-lo para o bem da Terra, de nosso meio ambiente, da humanidade e de todos os seres vivos.
             </p>
+            <p class="m-0 mt-4">
+            Embora a maioria das pessoas a associe ao meio ambiente, a sustentabilidade pode ser explorada em vários outros contextos, incluindo desenvolvimento 
+            econômico e responsabilidade social. Esses contextos incluem a capacidade de carga da Terra, a sustentabilidade dos ecossistemas, ocupações, padrões 
+            de comportamento e assim por diante.
+            </p>        
+            <p class="m-0 mt-4">
+            ENuma sociedade sustentável, os seres humanos vivem em harmonia com o ambiente natural, conservando os recursos para as suas gerações futuras, para 
+            que todos desfrutem de justiça social e de uma elevada qualidade de vida.
+            </p>                
+        </div>
+        <div class="col-lg-6"><img src="./img/img3.png" class="img-fluid w-100 img-sust-meaning"></div>
         </div>
     </div>
-
-    <section class="main pt-0 pb-5">
-        <div class="my-5"></div>
-        <div class="container">
-          <div class="row pb-3">
-            <div class="col-lg-6 pb-2">
-              <p class="m-0">A fome mundial.</p>
-              <h1 class="title">World Hunger</h1>
-              <div class="line my-3"></div>
-              <p class="m-0 mt-4">
-                A fome se trata de uma ameaça universal.<br>
-                Os danos causados, especialmente, devido à guerra na Ucrânia e à COVID-19 continuam a prejudicar os agricultores, 
-                as cadeias de abastecimento globais e a deixar milhões de pessoas desempregadas.
-              </p> 
-              <p class="m-0 mt-4">
-                Conflitos, choques econômicos, extremos climáticos e aumento dos preços dos fertilizantes estão se combinando para 
-                criar uma crise alimentar de proporções sem precedentes. <br>
-                Até 828 milhões de pessoas não têm certeza de onde virá sua próxima refeição. <br>
-              </p>                   
-              <p class="m-0 mt-4">
-                Temos uma escolha: agir agora para salvar vidas e investir em soluções que garantam segurança alimentar, estabilidade e paz para todos, 
-                ou ver pessoas em todo o mundo enfrentando uma fome crescente.
-              </p>
-              <br>
-              <a href="a-crise-da-fome.html"><button class="mbtn1 mt-4">Saiba mais</button></a>
-              <a href="https://www.acaodacidadania.org.br/" target="_blank"><button class="mbtn3 mt-4 m-lg-2">♡ Doe agora</button></a>
-            </div>
-            <div class="col-lg-6"><img src="./img/img3.png" class="img-fluid w-100 img-a-crise-da-fome"></div>
-          </div>
-        </div>
-      </section>
-      <!--*************************  Impacto Global  ***************************-->
-      <section class="impacto-global pt-5 pb-5">
-        <div class="container">
-          <div class="row pb-3">
-            <div class="col-lg-6"><img src="./img/img2.png" class="img-fluid w-100 img-impacto-global"></div>
-            <div class="col-lg-6 mt-3">
-              <p class="m-0">Lorem ipsum</p>
-              <h1>Insegurança Alimentar</h1>
-              <div class="py-3"></div>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias fugiat velit expedita, explicabo delectus facere autem unde inventore aperiam, impedit ex assumenda error iure. Omnis, assumenda odit? Tempore, commodi quo.</p>            
-              <p class="m-0 mt-4">
-                A fome se trata de uma ameaça universal.<br>
-                Os danos causados, especialmente, devido à guerra na Ucrânia e à COVID-19 continuam a prejudicar os agricultores, 
-                as cadeias de abastecimento globais e a deixar milhões de pessoas desempregadas.
-              </p> 
-              <p class="m-0 mt-4">
-                Conflitos, choques econômicos, extremos climáticos e aumento dos preços dos fertilizantes estão se combinando para 
-                criar uma crise alimentar de proporções sem precedentes. <br>
-                Até 828 milhões de pessoas não têm certeza de onde virá sua próxima refeição. <br>
-              </p>                   
-              <a href="impacto-global.html"><button class="mbtn2 mbtn mt-5">Saiba mais</button></a>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!--*************************  Fome Zero  ***************************-->
-      <section class="fome-zero pt-5">
-        <div class="container">
-          <div class="row pb-3">
-            <div class="col-lg-6 mt-4">
-              <p class="m-0">Bem vindo(a) à</p>
-              <h1>Agricultura Sustentável</h1>
-              <div class="py-3"></div>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias fugiat velit expedita, explicabo delectus facere autem unde inventore aperiam, impedit ex assumenda error iure. Omnis, assumenda odit? Tempore, commodi quo.</p>            
-              <p class="m-0 mt-4">
-                A fome se trata de uma ameaça universal.<br>
-                Os danos causados, especialmente, devido à guerra na Ucrânia e à COVID-19 continuam a prejudicar os agricultores, 
-                as cadeias de abastecimento globais e a deixar milhões de pessoas desempregadas.
-              </p> 
-              <p class="m-0 mt-4">
-                Conflitos, choques econômicos, extremos climáticos e aumento dos preços dos fertilizantes estão se combinando para 
-                criar uma crise alimentar de proporções sem precedentes. <br>
-                Até 828 milhões de pessoas não têm certeza de onde virá sua próxima refeição. <br>
-              </p>                   
-              <p class="m-0 mt-4">
-                Temos uma escolha: agir agora para salvar vidas e investir em soluções que garantam segurança alimentar, estabilidade e paz para todos, 
-                ou ver pessoas em todo o mundo enfrentando uma fome crescente.
-              </p>
-              <a href="fome-zero.html"><button class="mbtn2 mbtn mt-5">Saiba mais</button></a>
-            </div>
-            <div class="col-lg-6"><img src="./img/img3.png" class="img-fluid w-100 img-fome-zero"></div>
-          </div>
-        </div>
     </section>
+  
+    <section class="sust-tips pt-4 pb-5">
+    <div class="container">
+        <div class="row pb-0">
+        <div class="col-lg-6"><img src="./img/img2.png" class="img-fluid w-100 img-sust-tips"></div>
+        <div class="col-lg-6 mt-3">
+            <p class="m-0">Dicas de</p>
+            <h1>Como ser sustentável</h1>              
+            <p class="m-0 mt-4">
+            Felizmente, optando por muitas escolhas simples, você pode facilmente tornar sua vida mais estável e agradável.<br>
+            Aqui está uma lista com mudanças fáceis para viver de forma sustentável todos os dias.<br><br>
+            Escolher um estilo de vida sustentável não significa que você terá que desistir de coisas ou reduzir sua qualidade de vida! Na verdade, 
+            você se sentirá mais realizado e feliz sabendo que está contribuindo para um mundo melhor.
+            </p> 
+            <p class="mt-5 fw-semibold">
+            Use Produtos Sustentáveis
+            </p>              
+            <p class="m-0 mt-1">
+            É muito fácil optar por produtos sustentáveis hoje em dia. Inúmeras empresas fazem da sustentabilidade uma prioridade.<br>
+            De roupas a marcas de beleza, empresas de alimentos e energia. Existem tantas opções sustentáveis ​​para escolher.
+            Portanto, escolha marcas que fazem da sustentabilidade uma prioridade...
+            </p>                   
+            <a href="#"><button class="mbtn2 mbtn mt-5">Saiba mais</button></a>
+        </div>
+        </div>
+    </div>
+    </section>
+  
+    <section class="sust-benefits mb-4">
+    <div class="container">
+        <div class="row pb-5">
+        <div class="col-lg-6 mt-3">
+            <p class="m-0">Aqui estão os</p>
+            <h1>Principais benefícios de adotar a sustentabilidade</h1>
+            <div class="py-3"></div>
+            <p class="mt-2 fw-semibold">Garante um futuro para todos</p>            
+            <p class="m-0 mt-1">
+            Independentemente de quem somos, onde vivemos e o que fazemos, todos temos uma obrigação moral uns com os outros, com nossas futuras gerações e com 
+            outras espécies de sustentar o planeta. Nossas escolhas e ações atuais têm enormes impactos de longo prazo nas gerações futuras...
+            </p> 
+            <p class="mt-5 fw-semibold">Reduz o uso de energia</p>     
+            <p class="m-0 mt-1">
+            Práticas de negócios sustentáveis levam a uma redução significativa nos custos de energia a longo prazo. 
+            Algumas iniciativas rápidas, como a mudança para iluminação energeticamente eficiente, de acordo com o cronograma de produção, reduzem os custos 
+            elétricos de longo prazo...
+            </p>                   
+            <a href="#"><button class="mbtn1 mbtn mt-5">Saiba mais</button></a>
+        </div>
+        <div class="col-lg-6"><img src="./img/img1.png" class="img-fluid w-100 img-sust-benefits"></div>
+        </div>
+    </div>
+    </section>
+    
     <footer class="bd-footer py-md-5 bg-body-tertiary">
       <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
           <div class="row">
