Projeto final (com as páginas teste)

--- a/sobre-o-projeto.html
+++ b/sobre-o-projeto.html
@@ -93,13 +93,10 @@
                             <a class="nav-link py-2 px-0 px-lg-2" href="sustentabilidade.html">Sustentabilidade</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="#">Éticas</a>
+                            <a class="nav-link py-2 px-0 px-lg-2" href="exemplos.html">Exemplos</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="#">Exemplos</a>
-                        </li>
-                        <li class="nav-item col-6 col-lg-auto">
-                            <a class="nav-link py-2 px-0 px-lg-2" href="#" target="_blank">Vídeo Pitch</a>
+                            <a class="nav-link py-2 px-0 px-lg-2" href="video-pitch.html" target="_blank">Vídeo Pitch</a>
                         </li>
                         <li class="nav-item col-6 col-lg-auto">
                             <a class="nav-link py-2 px-0 px-lg-2" href="sobre-o-projeto.html">Sobre o projeto</a>
@@ -214,18 +211,22 @@
                     <div class="row m-0">
                         <div class="col-lg-3">
                             <div class="member-image">
-                                <img src="./img/camping.png" alt="">
+                                <img src="./img/arthur.png" title="Arthur Calado Novaes">
                             </div>
                         </div>
-                        <div class="mt-2 ms-2 col-xl-8">
+                        <div class="ms-2 col-xl-8">
                             <span class="mt-3 pt-5 ms-5 member-title">
-                                Arthur
+                                Arthur Calado Novaes
                             </span>
                             <br>
                             <span class="mt-5 pt-5 ms-5 member-position">
-                                Front-End Designer
+                                Desenvolvedor Mobile
                             </span>
-                            <p class="mt-2 ms-5 member-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
+                            <p class="mt-2 ms-5 member-text">
+                                Arthur conta com anos de experiência com desenvolvimento Android e IOS. 
+                                O nosso querido Java Champion possibilitou o desenvolvimento do nosso aplicativo Green Connect, 
+                                gamificando as melhores práticas sustentáveis.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -233,18 +234,21 @@
                     <div class="row">
                         <div class="col-lg-3">
                             <div class="member-image">
-                                <img src="./img/camping.png" alt="">
+                                <img src="./img/lucas.png" title="Lucas Scardone Avila">
                             </div>
                         </div>
-                        <div class="mt-2 ms-2 col-xl-8">
+                        <div class="ms-2 col-xl-8">
                             <span class="mt-3 pt-5 ms-5 member-title">
-                                Lucas
+                                Lucas Scardone Avila
                             </span>
                             <br>
                             <span class="mt-5 pt-5 ms-5 member-position">
-                                Front-End Designer
+                                Criador de Conteúdo
                             </span>
-                            <p class="mt-2 ms-5 member-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
+                            <p class="mt-2 ms-5 member-text">
+                                Pesquisador oficial da equipe sobre qualquer assunto, seja tecnologia, sustentabilidade ou negócios. 
+                                Formado em administração, atualmente estuda engenharia de software.
+                            </p>
                         </div>
                     </div>
                 </div>  
@@ -254,18 +258,21 @@
                     <div class="row m-0">
                         <div class="col-lg-3">
                             <div class="member-image">
-                                <img src="./img/camping.png" alt="">
+                                <img src="./img/giovana.png" title="Giovana Mitie Sakai">
                             </div>
                         </div>
-                        <div class="mt-2 ms-2 col-xl-8">
+                        <div class="ms-2 col-xl-8">
                             <span class="mt-3 pt-5 ms-5 member-title">
                                 Giovana Mitie Sakai
                             </span>
                             <br>
                             <span class="mt-5 pt-5 ms-5 member-position">
-                                Front-End Designer
+                                Desenvolvedora Front-End
                             </span>
-                            <p class="mt-2 ms-5 member-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
+                            <p class="mt-2 ms-5 member-text">
+                                Não só de HTML, CSS e JS vivem as pessoas desenvolveroras de Front-end. 
+                                Giovana é nossa especialista em frameworks Javascript tais como React e Angular. Além disso, é expert em acessibilidade web.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -273,18 +280,22 @@
                     <div class="row m-0">
                         <div class="col-lg-3">
                             <div class="member-image">
-                                <img src="./img/camping.png" alt="">
+                                <img src="./img/marcelo.png" title="Marcelo Vinicius Viana Moraes">
                             </div>
                         </div>
-                        <div class="mt-2 ms-2 col-xl-8">
+                        <div class="ms-2 col-xl-8">
                             <span class="mt-3 pt-5 ms-5 member-title">
-                                Marcelo
+                                Marcelo Vinicius Viana Moraes
                             </span>
                             <br>
                             <span class="mt-5 pt-5 ms-5 member-position">
-                                Front-End Designer
+                                Desenvolvedor Back-End
                             </span>
-                            <p class="mt-2 ms-5 member-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
+                            <p class="mt-2 ms-5 member-text">
+                                O Green Connect não seria tão integrado sem nosso desenvolvedor Back-end. 
+                                As funcionalidades mais complexas do nosso site e integrações do aplicativo estão por sua conta. 
+                                Suas especialidades são as liguagens C like e Go.
+                            </p>
                         </div>
                     </div>
                 </div>  
@@ -294,49 +305,65 @@
                     <div class="row m-0">
                         <div class="col-lg-3">
                             <div class="member-image">
-                                <img src="./img/camping.png" alt="">
+                                <img src="./img/karen.png" title="Karen Reis Cangussu">
                             </div>
                         </div>
-                        <div class="mt-2 ms-2 col-xl-8">
+                        <div class="ms-2 col-xl-8">
                             <span class="mt-3 pt-5 ms-5 member-title">
-                                Karen
+                                Karen Reis Cangussu  
                             </span>
                             <br>
                             <span class="mt-5 pt-5 ms-5 member-position">
-                                Front-End Designer
+                                Designer
                             </span>
-                            <p class="mt-2 ms-5 member-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo iste nulla amet iusto aperiam sit.</p>
+                            <p class="mt-2 ms-5 member-text">
+                                A criadora dos maravilhosos assets mostrados em nosso site e aplicativo. 
+                                Designer certificada pela Adobe, está sempre pronta para reinventar a experiência de nossos usuários em qualquer plataforma.
+                            </p>
                         </div>
                     </div>
                 </div>
-            </div>
+           </div>
         </div>
     </section>
   
-    <section class="sust-benefits mb-4">
+    <section class="mb-4">
         <div class="container">
-            <div class="row pb-5">
-                <div class="col-lg-6 mt-5">
+            <div class="row mb-0">
+                <div class="col-lg-6 mt-5 pt-4">
                     <h2>Conheça mais sobre o nosso projeto</h2> 
                     <div class="py-3"></div>
-                    <p class="mt-2 fw-semibold">Alguma coisa</p>            
+                    <p class="mt-2 fw-semibold">O que é o Green Connect?</p>            
                     <p class="m-0 mt-1">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
+                        O Green Connect trata-se de um aplicativo que foi pensado visando a gamificação de práticas sustentáveis presentes no dia a dia.<br>
+                        A maioria das pessoas consideraria entediante ou cansativo manter práticas como a reciclagem, o consumo reduzido de energia 
+                        e água, ou até mesmo a redução do uso de veículos a combustão.<br>
+                        Isso seria absolutamente verdadeiro sem o elemento do jogo. 
+                        Empresas que aderirem ao Green Connect poderão criar um ecossistema sustentável com seus funcionários.
                     </p> 
-                    <p class="mt-5 fw-semibold">Alguma coisa</p>     
+                </div>
+                <div class="col-lg-6"><img src="./img/green-connect.png" class="img-fluid w-75 img-green-connect"></div>
+            </div>
+            <div class="row pb-5">
+                <div class="col-lg-6"><img src="./img/team.png" class="img-fluid w-100 img-member"></div>
+                <div class="col-lg-6 mt-4">
+                    <p class="mt-5 fw-semibold">Como o aplicativo funciona?</p>     
                     <p class="m-0 mt-1">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum officia earum est vero quidem quo? Tempora ad unde atque iste!
+                        Os funcionários cadastrados ganham créditos para cada ação sustentável que executarem, as empresas por sua vez, convertem 
+                        esses créditos em bônus, como milhas ou abatimento no banco de horas.<br>
+                        O aplicativo conta com algumas barreiras anti-trapaça. 
+                        Por exemplo, o usuário só pode contar que um item foi reciclado se escanear seu código de barras pelo aplicativo e só pode 
+                        contar que se deslocou pela cidade sem usar veículos poluidores se habilitar o GPS para que sua velocidade seja monitorada 
+                        e seja compatível com alguém caminhando, correndo ou de bicicleta.
+                    </p>           
+                    <p class="mt-5 fw-semibold">Segurança do aplicativo</p>     
+                    <p class="m-0 mt-1">
+                        Todos os dados são anonimizados em nosso banco e estão em perfeita conformidade com a LGPD (Lei Geral de Proteção de Dados). 
+                        Por isso mesmo os usuários não precisam se assustar com as permissões que o aplicativo precisa para funcionar nos celulares, 
+                        todas elas existem para garantir um sistema mais justo.<br>
+                        Em caso de dúvidas, leia os nossos termos e condições aqui.
                     </p>                   
                 </div>
-                <div class="col-lg-6"><img src="./img/team.png" class="img-fluid w-100 img-member"></div>
             </div>
         </div>
     </section>
@@ -351,7 +378,7 @@
                         <span class="fs-5">&nbsp;Schneider Electric</span>
                     </a>
                     <ul class="list-unstyled small">
-                        <li class="mb-2">Copyright 2023. All rights reserved</li>
+                        <li class="mb-2">Copyright 2023. Todos os direitos reservados.</li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-2 offset-lg-1">
@@ -359,20 +386,19 @@
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="index.html">Home</a></li>
                         <li class="mb-2"><a href="sustentabilidade.html">Sustentabilidade</a></li>
-                        <li class="mb-2"><a href="#">Éticas</a></li>
-                        <li class="mb-2"><a href="#">Exemplo</a></li>
-                        <li class="mb-2"><a href="#">Vídeo Pitch</a></li>
+                        <li class="mb-2"><a href="exemplos.html">Exemplos</a></li>
+                        <li class="mb-2"><a href="video-pitch.html">Vídeo Pitch</a></li>
                         <li class="mb-2"><a href="sobre-o-projeto.html">Sobre o projeto</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-2">
-                    <h5>Guides</h5>
+                    <h5>Suporte</h5>
                     <ul class="list-unstyled">
-                        <li class="mb-2"><a href="#">Getting started</a></li>
-                        <li class="mb-2"><a href="#">Starter template</a></li>
-                        <li class="mb-2"><a href="#">Webpack</a></li>
-                        <li class="mb-2"><a href="#">Parcel</a></li>
-                        <li class="mb-2"><a href="#">Vite</a></li>
+                        <li class="mb-2"><a href="#">Contate-nos</a></li>
+                        <li class="mb-2"><a href="#">Política de Suporte</a></li>
+                        <li class="mb-2"><a href="#">Documentação</a></li>
+                        <li class="mb-2"><a href="#">Centro de ajuda</a></li>
+                        <li class="mb-2"><a href="#">Diretrizes</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-lg-2">
@@ -385,13 +411,13 @@
                     </ul>
                 </div>
                 <div class="col-6 col-lg-2">
-                    <h5>Community</h5>
+                    <h5>Comunidade</h5>
                     <ul class="list-unstyled">
                         <li class="mb-2"><a href="#">FAQs</a></li>
-                        <li class="mb-2"><a href="#">Discussions</a></li>
-                        <li class="mb-2"><a href="#">Corporate Sponsors</a></li>
-                        <li class="mb-2"><a href="#">Terms & Conditions</a></li>
-                        <li class="mb-2"><a href="#">Privacy</a></li>
+                        <li class="mb-2"><a href="#">Política de Privacidade</a></li>
+                        <li class="mb-2"><a href="#">Central de Privacidade</a></li>
+                        <li class="mb-2"><a href="#">Termo de Uso</a></li>
+                        <li class="mb-2"><a href="#">Patrocinadores</a></li>
                     </ul>
                 </div>
             </div>
