--- a/video-pitch.html
+++ b/video-pitch.html
@@ -192,150 +192,18 @@
     <section class="mb-0">
         <div class="container">
             <div class="row pb-3">
-                <div class="col-lg-6 mt-3">
-                    <p class="m-0">Vamos falar sobre a</p>
-                    <h1>Sustentabilidade</h1>     
+                <div class="col-lg-6 mt-3 mb-5">
+                    <p class="m-0">A seguir</p>
+                    <h1>Vídeo Pitch</h1>     
                     <div class="line my-1"></div>
-                    <p class="m-0 mt-4">
-                    Sustentabilidade é um conceito relacionado ao desenvolvimento de produtos, bens e serviços que envolve atender às nossas necessidades presentes 
-                    sem comprometer a capacidade das gerações futuras de atender às suas próprias necessidades.<br><br>
-                    Como conceito, ela reconhece que o meio ambiente é um recurso esgotável. Portanto, é importante usar o meio ambiente e seus recursos 
-                    de forma racional e protegê-lo para o bem da Terra, de nosso meio ambiente, da humanidade e de todos os seres vivos.
-                    </p>
-                    <p class="m-0 mt-4">
-                    Embora a maioria das pessoas a associe ao meio ambiente, a sustentabilidade pode ser explorada em vários outros contextos, incluindo desenvolvimento 
-                    econômico e responsabilidade social. Esses contextos incluem a capacidade de carga da Terra, a sustentabilidade dos ecossistemas, ocupações, padrões 
-                    de comportamento e assim por diante.
-                    </p>        
-                    <p class="m-0 mt-4">
-                    Numa sociedade sustentável, os seres humanos vivem em harmonia com o ambiente natural, conservando os recursos para as suas gerações futuras, para 
-                    que todos desfrutem de justiça social e de uma elevada qualidade de vida.
-                    </p>                
+                    <div class="mt-4 pt-4"></div>
+                    <iframe src="https://player.vimeo.com/video/852534593?h=81bf8d61f6" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="col-lg-6"><img src="./img/sustentability.png" class="img-fluid w-90 img-sust-meaning"></div>
-            </div>
-            <div class="mt-4"></div>
-            <div class="row mt-4 pb-5">
-                <div class="col-lg-8 mt-5">
-                    <h2>Como ser sustentável</h2> 
-                    <p class="m-0 mt-4">
-                        Felizmente, optando por muitas escolhas simples, você pode facilmente tornar sua vida mais estável e agradável.
-                        Aqui está uma lista com mudanças fáceis para viver de forma sustentável todos os dias.<br>
-                    </p>
-                    <p class="m-0 mt-4">
-                        Escolher um estilo de vida sustentável não significa que você terá que desistir de coisas ou reduzir sua qualidade 
-                        de vida! Na verdade, você se sentirá mais realizado e feliz sabendo que está contribuindo para um mundo melhor.
-                    </p>
-                </div>
-                <div class="col-lg-5">
-                    <div class="py-3"></div>
-                    <p class="mt-2 fw-semibold">Escolha Alimentos e Bebidas Sustentáveis</p>            
-                    <p class="m-0 mt-1">
-                        Mais importante, vote com seu dinheiro. Escolha fabricantes de alimentos sustentáveis.<br>
-                        Você pode fazer compras nos mercados de agricultores locais para obter saborosos produtos frescos da fazenda de fornecedores locais. 
-                        Comprar em feiras livres ajuda a reduzir as emissões de carbono do transporte.<br>
-                        Você também pode escolher apenas marcas que se comprometeram com práticas sustentáveis. Por exemplo, na Blugalacier, estamos totalmente 
-                        comprometidos em manter a aquicultura sustentável. Isso é algo de que estamos muito orgulhosos e sempre manteremos.
-                    </p> 
-                    <p class="mt-5 fw-semibold">Reciclar</p>     
-                    <p class="m-0 mt-1">
-                        Reciclar é o mínimo que todos deveriam fazer neste momento. É tão fácil e conveniente reciclar. Simplesmente certifique-se de ter uma 
-                        lixeira em sua casa, empresa, etc.<br>
-                        Todas as empresas de lixo agora oferecem coleta de reciclagem com coleta de lixo, então não há desculpa!
-                    </p>           
-                    <img src="./img/sustainable.png" class="mt-5 img-fluid w-100 img-sustainable">
-                    <p class="mt-5 fw-semibold">Escolha opções de faturamento sustentável</p>     
-                    <p class="m-0 mt-1">
-                        Cada pessoa e empresa no planeta tem contas que precisam ser pagas. Esta é uma maneira simples de todos nós fazermos a diferença.<br>
-                        Classifique suas contas e tente ficar sem papel o máximo possível. Incentive as empresas com as quais você se associa a não usar papel, 
-                        se ainda não o fizeram. Os extratos de cobrança regulares podem ser enviados para o seu e-mail, tornando-os mais acessíveis, organizados 
-                        e seguros. A faturação eletrónica torna a sua vida mais fácil e é melhor para o ambiente.
-                    </p>                   
-                </div>
-
-                <div class="col-lg-1"></div>
-
-                <div class="col-lg-5">
-                    <div class="py-3"></div>
-                    <p class="mt-2 fw-semibold">Use Produtos Sustentáveis</p>            
-                    <p class="m-0 mt-1">
-                        É muito fácil optar por produtos sustentáveis hoje em dia. Inúmeras empresas fazem da sustentabilidade uma prioridade.<br>
-                        De roupas a marcas de beleza, empresas de alimentos e energia. Existem tantas opções sustentáveis ​​para escolher. Portanto, 
-                        escolha marcas que fazem da sustentabilidade uma prioridade. Escolha marcas que usam plástico ou materiais reciclados em vez de 
-                        marcas que continuamente adicionam aos aterros sanitários.<br>
-                        Se você é proprietário de uma empresa, um planejamento cuidadoso em todos os seus processos de negócios pode ajudá-lo a parar de 
-                        enviar resíduos para aterros sanitários. As empresas podem tomar várias medidas simples para alcançar práticas mais sustentáveis, 
-                        como usar bambu em vez de talheres de plástico descartáveis, substituir lâmpadas fluorescentes por lâmpadas LED e contratar empresas 
-                        de tratamento de resíduos, etc.
-                    </p> 
-                    <p class="mt-5 fw-semibold">Faça ajustes de transporte</p>            
-                    <p class="m-0 mt-1">
-                        Tente evitar ao máximo os automóveis, pelo menos em distâncias curtas. Isso ajudará a reduzir as emissões de carbono, salvando assim 
-                        o meio ambiente. Você pode optar por um carro elétrico, bicicleta ou correr ou caminhar se morar em uma cidade caminhável.<br>
-                        É uma ótima maneira de fazer exercícios e reduzir o quanto você precisa depender de transporte movido a gasolina. Se você não pode 
-                        andar ou usar o transporte público, opte pela carona. Você pode se oferecer para levar colegas de trabalho e amigos em vez de irem juntos. 
-                        Ou pegue uma carona sempre que possível. Pequenas ações consistentes realmente somam a longo prazo!
-                    </p> 
-                    <p class="mt-5 fw-semibold">Escolha produtos reutilizáveis</p>     
-                    <p class="m-0 mt-1">
-                        Uma pequena mudança em seus hábitos pode ter um grande efeito sustentável. Opte por garrafas reutilizáveis ​​em movimento.<br>
-                        Escolha panos de prato reutilizáveis ​​em vez de toalhas de papel, sacolas de compras reutilizáveis ​​em vez de papel ou sacolas plásticas. 
-                        Além disso, use recipientes de armazenamento de alimentos reutilizáveis ​​para embalar seus alimentos com segurança e reduzir o desperdício.
-                    </p>    
-                    <p class="mt-5 fw-semibold">Reduza o Plástico</p>     
-                    <p class="m-0 mt-1">
-                        Todos os anos, milhares de tartarugas marinhas, aves marinhas e outros mamíferos marinhos morrem por causa do plástico. Portanto, reduza 
-                        o desperdício de plástico usando sacolas reutilizáveis ​​e evitando produtos feitos de plástico.<br>
-                        O plástico não é biodegradável, por isso acaba em aterros, a menos que seja reutilizado por uma marca comprometida com a sustentabilidade.
-                    </p>             
-                </div>
-            </div>
-            <div class="row mt-4 pb-5">
-                <div class="col-lg-6 mt-5">
-                    <h2>Principais benefícios de adotar a sustentabilidade</h2>
-                    <div class="py-3"></div>
-                    <p class="mt-2 fw-semibold">Garante um futuro para todos</p>            
-                    <p class="m-0 mt-1">
-                        Independentemente de quem somos, onde vivemos e o que fazemos, todos temos uma obrigação moral uns com os outros, com nossas futuras 
-                        gerações e com outras espécies de sustentar o planeta. Nossas escolhas e ações atuais têm enormes impactos de longo prazo nas gerações futuras.<br>
-                        Praticar a sustentabilidade garante que façamos escolhas éticas que tragam um futuro seguro e habitável para todos. Se esgotarmos os recursos 
-                        da Terra, as gerações futuras serão esgotadas. Por exemplo, se pescarmos demais em nossos oceanos, corremos o risco não apenas de esgotar 
-                        o suprimento de peixes, mas também de esgotar o suprimento de todos os organismos da cadeia alimentar relacionados a esse peixe.
-                    </p> 
-                    <p class="mt-5 fw-semibold">Uso de energia reduzido</p>            
-                    <p class="m-0 mt-1">
-                        Práticas de negócios sustentáveis levam a uma redução significativa nos custos de energia a longo prazo. Algumas iniciativas rápidas, 
-                        como a mudança para iluminação energeticamente eficiente, de acordo com o cronograma de produção, reduzem os custos elétricos de longo prazo.<br>
-                        O uso de energia solar e eólica, juntamente com equipamentos energeticamente eficientes, reduz as contas mensais de serviços públicos. 
-                        Reduzir o consumo de energia é realmente positivo para as empresas, pois as ajuda a se tornarem mais eficientes em geral.
-                    </p> 
-                </div>
-                <div class="col-lg-6"><img src="./img/how-to-be-sustainable.png" class="img-fluid w-75 img-sust-benefits2"></div>
-            </div>
-            <div class="row mt-4 pb-5">
-                <div class="col-lg-5"><img src="./img/recycle.png" class="img-fluid w-90 img-recycle"></div>
-                <div class="ms-5 col-lg-6 mt-3">
-                    <p class="mt-5 fw-semibold">Um habitat saudável para todos</p>     
-                    <p class="m-0 mt-1">
-                        A longo prazo, nossa sociedade se beneficia com a melhoria da qualidade da água e do ar, redução dos aterros sanitários e aumento das 
-                        fontes de energia renováveis. Ações sustentáveis ​​ajudam a fazer uma diferença real na sociedade. <br>
-                        Estar comprometido com a sustentabilidade reduzirá sua pegada de carbono e a quantidade de toxinas liberadas no meio ambiente, tornando-o 
-                        seguro. Quando focamos na sustentabilidade, o mundo inteiro se beneficia e consegue viver em condições de vida mais limpas e saudáveis.
-                    </p>  
-                    <p class="mt-5 fw-semibold">Impacto Social</p>     
-                    <p class="m-0 mt-1">
-                        Incentivar a conservação dos recursos naturais penetra profundamente não apenas nos padrões e na marca da sua empresa, mas também nos 
-                        funcionários e suas famílias. <br>
-                        Se você tornar a sustentabilidade importante em seu negócio, estará conduzindo uma conversa profundamente 
-                        importante para a vanguarda do consumismo. O impacto social pode chegar longe.
-                    </p>      
-                </div>
-              
             </div>
         </div>
-        </section>
+    </section>
     
-    <<footer class="bd-footer py-md-5 bg-body-tertiary">
+    <footer class="bd-footer py-md-5 bg-body-tertiary">
         <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
             <div class="row">
                 <div class="col-lg-3 mb-3">
